feat: key bindings, floating windows

--- a/i3/config
+++ b/i3/config
@@ -12,8 +12,10 @@
 client.background       #222222
 
 for_window [class=".*"] border pixel 2
+for_window [class="Arandr|Blueman-manager|Pavucontrol"] floating enable
+for_window [title="nmtui"] floating enable
 
-gaps inner 4
+# gaps inner 4
 
 set $mod Mod4
 
@@ -119,6 +121,12 @@ bindsym $mod+Shift+h resize shrink width 10 px or 10 ppt
 bindsym $mod+Shift+j resize grow height 10 px or 10 ppt
 bindsym $mod+Shift+k resize shrink height 10 px or 10 ppt
 bindsym $mod+Shift+l resize grow width 10 px or 10 ppt
+
+# split in horizontal orientation
+bindsym $mod+i split h
+
+# split in vertical orientation
+bindsym $mod+m split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
