--- a/i3/config
+++ b/i3/config
@@ -171,6 +171,6 @@ bar {
         status_command i3status
         colors {
             background #222222
-            statusline #888888
+            statusline #ffffff
         }
 }
